@@ -400,7 +400,6 @@ than to act as a token to permit the use of this feature. Example use:
 .. warning::
     The following restrictions apply to the use of :func:`literal_unroll`:
 
-    * This feature is only available for Python versions >= 3.6.
     * :func:`literal_unroll` can only be used on tuples and constant lists of
       compile time constants, e.g. ``[1, 2j, 3, "a"]`` and the list not being
       mutated.
