@@ -5,7 +5,7 @@ Installation
 Compatibility
 -------------
 
-Numba is compatible with Python 3.6 or later, and Numpy versions 1.15 or later.
+Numba is compatible with Python 3.7 or later, and Numpy versions 1.15 or later.
 
 Our supported platforms are:
 
@@ -260,7 +260,7 @@ vary with target operating system and hardware. The following lists them all
     information on obtaining and installing.
   * ``graphviz`` - for some CFG inspection functionality.
   * ``pickle5`` - provides Python 3.8 pickling features for faster pickling in
-    Python 3.6 and 3.7.
+    Python 3.7.
   * ``typeguard`` - used by ``runtests.py`` for
     :ref:`runtime type-checking <type_anno_check>`.
 
