@@ -1,6 +1,5 @@
 import numpy as np
 from numba.cuda.testing import unittest, CUDATestCase, skip_on_cudasim
-from numba.tests.support import skip_unless_py37_or_later
 from numba.np import numpy_support
 from numba import cuda, float32, float64, int32, vectorize, void, int64
 import math
@@ -538,14 +537,12 @@ class TestCudaMath(CUDATestCase):
     #---------------------------------------------------------------------------
     # test_math_remainder
 
-    @skip_unless_py37_or_later("math.remainder requires Python 3.7 or later")
     def test_math_remainder(self):
         self.binary_template_float32(math_remainder, np.remainder, start=1e-11)
         self.binary_template_float64(math_remainder, np.remainder, start=1e-11)
         self.binary_template_int64(math_remainder, np.remainder, start=1)
         self.binary_template_uint64(math_remainder, np.remainder, start=1)
 
-    @skip_unless_py37_or_later("math.remainder requires Python 3.7 or later")
     @skip_on_cudasim('math.remainder(0, 0) raises a ValueError on CUDASim')
     def test_math_remainder_0_0(self):
         @cuda.jit(void(float64[::1], int64, int64))
