@@ -63,14 +63,6 @@ skip_py38_or_later = unittest.skipIf(
     utils.PYVERSION >= (3, 8),
     "unsupported on py3.8 or later"
 )
-skip_tryexcept_unsupported = unittest.skipIf(
-    utils.PYVERSION < (3, 7),
-    "try-except unsupported on py3.6 or earlier"
-)
-skip_tryexcept_supported = unittest.skipIf(
-    utils.PYVERSION >= (3, 7),
-    "try-except supported on py3.7 or later"
-)
 
 _msg = "SciPy needed for test"
 skip_unless_scipy = unittest.skipIf(scipy is None, _msg)
@@ -103,10 +95,6 @@ skip_ppc64le_issue6465 = unittest.skipIf(platform.machine() == 'ppc64le',
                                          ("Hits: 'mismatch in size of "
                                           "parameter area' in "
                                           "LowerCall_64SVR4"))
-
-skip_unless_py37_or_later = lambda reason: \
-    unittest.skipIf(utils.PYVERSION < (3, 7),
-    reason)
 
 try:
     import scipy.linalg.cython_lapack
