@@ -3,6 +3,10 @@ Version 0.54.0
 
 In development
 
+NOTES:
+
+* Minimum python version raised to 3.7.
+
 Version 0.53.1 (25 March, 2021)
 -------------------------------
 
